src/main/java/com/example/appgithubrepo/domain/error/HeaderErrorException.java
package com.example.appgithubrepo.domain.error;

public class HeaderErrorException extends RuntimeException {
    public HeaderErrorException(String message) {
        super(message);
    }
}